xc comments overflow fix

--- a/wp-content/themes/yaledailynews/bootstrap/less/magazine.less
+++ b/wp-content/themes/yaledailynews/bootstrap/less/magazine.less
@@ -20,7 +20,7 @@ body.magazine {
 
     .item {
       position:relative;
-	  overflow: hidden !important;
+	  overflow: hidden ;
     }
   }
 
