--- a/wp-content/themes/yaledailynews/css/ydn.css
+++ b/wp-content/themes/yaledailynews/css/ydn.css
@@ -6589,7 +6589,7 @@ body.magazine .content-list .overlay a h3 {
 
 body.magazine .content-list .item {
   position: relative;
-  overflow: hidden !important;
+  overflow: hidden ;
 }
 
 body.magazine h1.mag-section {
